# linear-solvers

./: .gitignore  CMakeLists.txt  README.md
algorithms/cg/: CMakeLists.txt
algorithms/cg/cuda/: CMakeLists.txt  README.md  cg.cu  cuda_cg.cu
algorithms/cg/cuda/include/cg/: cuda.h
algorithms/cg/cuda/include/cg_run/: cg.h
algorithms/cg/cuda/src/: cg.cu  main.cu
algorithms/cg/cuda/test/: CMakeLists.txt
algorithms/cg/cuda/test/data/: 1138_bus_b.mat
algorithms/cg/include/cg/: cg.h
algorithms/cg/matlab/: cg.m  cg_main.m
algorithms/cg/mkl/: CMakeLists.txt  README.md  cg.cpp  mkl_cg.cpp
algorithms/cg/mkl/include/cg/: mkl.h
algorithms/cg/mkl/src/: cg.cpp
algorithms/cg/mkl/test/: CMakeLists.txt
algorithms/dr-bcg/: CMakeLists.txt
algorithms/dr-bcg/cuda/: CMakeLists.txt  README.md
algorithms/dr-bcg/cuda/benchmark/: CMakeLists.txt
algorithms/dr-bcg/cuda/cmake/: DR_BCGConfig.cmake.in
algorithms/dr-bcg/cuda/examples/: CMakeLists.txt
algorithms/dr-bcg/cuda/examples/1_read_mat_file/: CMakeLists.txt  README.md
algorithms/dr-bcg/cuda/include/dr_bcg/: cuda.h  debug.h  helper.h  sparse.h
algorithms/dr-bcg/cuda/include/dr_bcg/internal/: device_buffer.h  math.h
algorithms/dr-bcg/cuda/src/: CMakeLists.txt  cuda_dr_bcg.cu  dense.cu  helper.cu  sparse.cu
algorithms/dr-bcg/cuda/test/: CMakeLists.txt
algorithms/dr-bcg/matlab/: dr_bcg.m  dr_bcg_main.m
algorithms/dr-bcg/mkl/: CMakeLists.txt  mkl_dr_bcg.cpp
algorithms/dr-bcg/mkl/include/dr_bcg/: mkl.h
algorithms/dr-bcg/mkl/include/mkl/: dr_bcg.h
benchmark/: dr_bcg_benchmark.cu
benchmark/stacked-bars/: .gitignore  main.py  mkl.py  run_all.sh
data/: 1138_bus_ichol.mat  G2_circuit_b.mat  G2_circuit_ichol.mat
examples/: README.md
examples/1_read_mat_file/: CMakeLists.txt  read_mat_file.cu
examples/2_preconditioned/: preconditioned.cu
include/cg/: cg.h
include/cg_run/: cg.h  device_sparse_matrix.h  device_vector.h
include/common/: checks.h  cuda_checks.h  device_sparse_matrix.h  log.h  mkl_checks.h  mkl_matrices.h  timer.h
include/dr_bcg/: dense.h  device_buffer.h  device_sparse_matrix.h  dr_bcg.h  helper.h  sparse.h
include/dr_bcg/internal/: device_buffer.h  math.h  type_info.h
profile/: nsys-profile.sh
runner/: CMakeLists.txt  cgrun.cpp  cgrun.h  cuda_adapter.cu  cuda_adapter.h  parser.cpp  parser.h
scripts/: residual_over_iterations.slurm
src/: CMakeLists.txt  cg.cpp  cg.cu  dense.cu  dr_bcg.cu  helper.cu  main.cpp  main.cu  sparse.cu
test/: CMakeLists.txt  cg_test.cpp  dr_bcg_test.cu  test_cg.cu
test/residual-curves/: create_plots.sh  main.py  plot.py  plotter.py
