find_package(MatUtils CONFIG REQUIRED)
find_package(cxxopts CONFIG REQUIRED)

add_executable(cgrun cgrun.cpp parser.cpp)
target_link_libraries(cgrun PRIVATE MatUtils::mat_utils)

if(SOLVERS_BUILD_CUDA)
    if(SOLVERS_BUILD_CG)
        target_sources(cgrun PRIVATE cuda_adapter.cu)
        target_include_directories(cgrun PRIVATE ../include)
        target_link_libraries(cgrun PRIVATE cg::cuda)
        target_compile_definitions(cgrun PRIVATE CUDA_CG_ENABLED)
    endif()
endif()

if(SOLVERS_BUILD_MKL)
    if(SOLVERS_BUILD_CG)
        target_link_libraries(cgrun PRIVATE cg::mkl)
        target_compile_definitions(cgrun PRIVATE MKL_CG_ENABLED)
    endif()
    if(SOLVERS_BUILD_DR_BCG)
        target_link_libraries(cgrun PRIVATE dr_bcg::mkl)
        target_compile_definitions(cgrun PRIVATE MKL_DR_BCG_ENABLED)
    endif()
endif()
